
Correct bug plotting a set of MCAs as one image when the number of MCA
detectors is more than one.

Background subtraction methods also work on stack browsers.

Handling of scales in image plots.

Add ID26 RIXS plugin as part of MultiScanToMesh plugins.

Stacks of DESY fio files readable by windows binary.

Reduce memory usage when working with large in-memory stacks.

VERSION 4.6.2

Fix calculation of the MCA associated to a region when using dynamically
loaded 1D stacks.

Fix scan XANES normalization. All curves normalized instead of just the active one.

VERSION 4.6.1

Support GZIP compressed EDF files (extensions: edf.gz, ccd.gz, raw.gz)

Fix annoying issue of having to select the left side of a pixel in order to
have the pixel actually selected. 

Fix windows problem of PyMca not starting when the "My Documents" folder has
been relocated (issue number 3537267)

Fix Debian hurd-i386 build from source problem.


VERSION 4.6.0

Add an X-ray fluorescence spectrum for training purposes.

Improved unicode support.

Added a simple stack normalization plugin to the ROI tool.

Added a simple XANES normalization plugins to the ROI tool and the scan
window.

Adapt installation script to simplify linux distribution maintainers task.

Add a minimalistic set of post-installation tests.

Add man pages.

Correct variance information displayed in the terminal window.

Restore functionality of colormap-based mask calculation.

Add a progress bar to the stack simple fitting plugin.

Possibility to perform simple fitting of masked stack regions. 

VERSION 4.5.0

Support h5py version 2.x

Support OMNIC 8.x .map file format

Support TIFF format. Uncompressed and packbits.

Support a couple of ASCII based file formats of beamlines of Diamond and APS.

Preliminary Python 3.2 support.

Support principal components analysis of dynamically loaded stacks.

Improved HDF5 file format handling.

Possibility to visualize variable width line profiles on images.
